# Trabalho-Engenharia_de_Software

./: CMakeLists.txt  Cópia de 04.Rproj  README.md  consultardisponibilidadedialog.cpp  consultardisponibilidadedialog.ui  icons.qrc  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
